# sample-risczero-verifier-function

./: Cargo.toml  Dockerfile  input.car
src/: main.rs
